--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ allprojects {
 				'org.mousio:etcd4j' '2.0.+'
 				'org.apache.zookeeper:zookeeper' '3.5.+'
 				'com.google.guava:guava' '18.+'
+				'com.netflix.exhibitor:exhibitor-core' '1.5.2'
 
 				dependencySet(group: 'org.slf4j', version: '1.7.+') {
 					entry 'slf4j-api'
@@ -55,6 +56,13 @@ allprojects {
 					entry 'netty-buffer'
 					entry 'netty-common'
 					entry 'netty-codec'
+				}
+
+				dependencySet(group: 'org.eclipse.jetty', version: '9.3.+') {
+					entry 'jetty-servlets'
+					entry 'jetty-webapp'
+					entry 'jetty-server'
+					entry 'jetty-http'
 				}
 			}
 		}
