--- a/zookeeper/zk-common/build.gradle
+++ b/zookeeper/zk-common/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
 	compile 'org.mousio:etcd4j'
 	compile 'io.netty:netty-codec-http' // because of how etcd4j sets up dependencies
+	compile 'com.fasterxml.jackson.core:jackson-databind'
 
 	compile 'com.google.guava:guava'
 	compile 'org.slf4j:slf4j-api'
