--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,7 @@ rootProject.name = 'aeneas'
 include 'zookeeper:zk-manager'
 include 'zookeeper:zk-node'
 include 'zookeeper:zk-common'
+
+include 'mesos:docker'
+include 'mesos:mesos-master'
+include 'mesos:mesos-slave'
