--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,10 @@ allprojects {
 				'org.apache.zookeeper:zookeeper' '3.5.+'
 				'com.google.guava:guava' '18.+'
 				'com.netflix.exhibitor:exhibitor-core' '1.5.2'
+				'com.github.docker-java:docker-java' '0.10+'
 
 				'org.zeroturnaround:zt-exec' '1.7+'
+				'com.beust:jcommander' '1.47+'
 
 				dependencySet(group: 'org.slf4j', version: '1.7.+') {
 					entry 'slf4j-api'
