--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'aeneas'
 
+include 'aeneas-cli'
+
 include 'zookeeper:zk-manager'
 include 'zookeeper:zk-node'
 include 'zookeeper:zk-common'
