--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ allprojects {
 				dependencySet(group: 'org.slf4j', version: '1.7.+') {
 					entry 'slf4j-api'
 					entry 'slf4j-simple'
+					entry 'jul-to-slf4j'
 				}
 
 				dependencySet(group: 'io.netty', version: '4.1.0.Beta3') {
