extract common functionality into aeneas-common

--- a/zookeeper/zk-manager/build.gradle
+++ b/zookeeper/zk-manager/build.gradle
@@ -8,6 +8,7 @@ plugins {
 }
 
 dependencies {
+	compile project(':aeneas-common')
 	compile project(':zookeeper:zk-common')
 	compile('org.apache.zookeeper:zookeeper') {
 		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
