--- a/mesos/mesos-master/build.gradle
+++ b/mesos/mesos-master/build.gradle
@@ -8,6 +8,7 @@ plugins {
 }
 
 dependencies {
+	compile project(':aeneas-common')
 	compile project(':zookeeper:zk-common')
 
 	compile 'org.zeroturnaround:zt-exec'
