--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'aeneas'
 
 include 'aeneas-cli'
+include 'aeneas-common'
 
 include 'zookeeper:zk-manager'
 include 'zookeeper:zk-node'
